--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular-devkit/build-angular": "^19.2.0",
     "@angular/cli": "^19.2.6",
     "@angular/compiler-cli": "^19.2.5",
+    "@types/google.maps": "^3.58.1",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "19.3.0",
     "eslint": "^9.23.0",
