--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@angular/common": "^19.2.5",
     "@angular/compiler": "^19.2.5",
     "@angular/core": "^19.2.5",
+    "@angular/fire": "^19.2.0",
     "@angular/forms": "^19.2.5",
     "@angular/platform-browser": "^19.2.5",
     "@angular/platform-browser-dynamic": "^19.2.5",
     "@angular/router": "^19.2.5",
     "@primeng/themes": "^19.0.10",
     "@tailwindcss/postcss": "^4.1.3",
+    "firebase": "^11.9.0",
     "postcss": "^8.5.3",
     "primeng": "^19.0.10",
     "rxjs": "~7.8.0",
