--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@angular/platform-browser": "^19.2.5",
     "@angular/platform-browser-dynamic": "^19.2.5",
     "@angular/router": "^19.2.5",
+    "@aws-amplify/ui-angular": "^5.1.3",
     "@primeng/themes": "^19.0.10",
     "@tailwindcss/postcss": "^4.1.3",
+    "amplify": "^0.0.11",
+    "aws-amplify": "^6.15.0",
     "firebase": "^11.9.0",
     "postcss": "^8.5.3",
     "primeng": "^19.0.10",
