--- a/.nginx/nginx.conf.template
+++ b/.nginx/nginx.conf.template
@@ -8,7 +8,21 @@ server {
             try_files $uri $uri/ /index.html =404;
             ssi on;
             ssi_types application/javascript;
-            set $example_env "${EXAMPLE_ENV}";
+
+            set $backend_url "${BACKEND_URL}";
+            set $websocket_url "${WEBSOCKET_URL}";
+            set $firebase_vapid_key "${FIREBASE_VAPID_KEY}";
+            set $firebase_api_key "${FIREBASE_API_KEY}";
+            set $firebase_auth_domain "${FIREBASE_AUTH_DOMAIN}";
+            set $firebase_project_id "${FIREBASE_PROJECT_ID}";
+            set $firebase_storage_bucket "${FIREBASE_STORAGE_BUCKET}";
+            set $firebase_messaging_sender_id "${FIREBASE_MESSAGING_SENDER_ID}";
+            set $firebase_app_id "${FIREBASE_APP_ID}";
+            set $firebase_measurement_id "${FIREBASE_MEASUREMENT_ID}";
+            set $AWS_PROJECT_REGION "${AWS_PROJECT_REGION}";
+            set $AWS_COGNITO_REGION "${AWS_COGNITO_REGION}";
+            set $AWS_USER_POOLS_ID "${AWS_USER_POOLS_ID}";
+            set $AWS_USER_POOLS_WEB_CLIENT_ID "${AWS_USER_POOLS_WEB_CLIENT_ID}";
     }
 
 
